// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-talon-one destination: updateCustomerProfilesAudiences action - all fields 1`] = `
Object {
  "data": Array [
    Object {
      "adds": Array [
        -5649754167967744,
      ],
      "customerProfileId": "g64#i$3",
      "deletes": Array [
        -5649754167967744,
      ],
    },
  ],
}
`;

exports[`Testing snapshot for actions-talon-one destination: updateCustomerProfilesAudiences action - required fields 1`] = `
Object {
  "data": Array [
    Object {
      "customerProfileId": "g64#i$3",
    },
  ],
}
`;
